--- a/Minesweeper/Base.lproj/Main.storyboard
+++ b/Minesweeper/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3EP-2G-fIO">
-                                <rect key="frame" x="70.5" y="108" width="234" height="58"/>
+                                <rect key="frame" x="70.5" y="291.5" width="234" height="58"/>
                                 <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="234" id="MtL-ud-Xxy"/>
@@ -37,7 +37,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtK-OO-ucH">
-                                <rect key="frame" x="70.5" y="193" width="234" height="58"/>
+                                <rect key="frame" x="70.5" y="376.5" width="234" height="58"/>
                                 <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="58" id="UtH-qS-EqK"/>
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mgT-bQ-tgo">
-                                <rect key="frame" x="70.5" y="278" width="234" height="58"/>
+                                <rect key="frame" x="70.5" y="461.5" width="234" height="58"/>
                                 <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="234" id="fju-PZ-wd4"/>
@@ -72,18 +72,40 @@
                                     <action selector="gameDifficultyChosen:" destination="u3e-n8-ewN" eventType="touchUpInside" id="oeL-t7-8dr"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Minesweeper!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXu-U3-u7Z">
+                                <rect key="frame" x="34" y="193" width="307.5" height="32.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <color key="textColor" red="0.092556603187550435" green="0.19203083039100161" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a difficulty:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gzg-iq-H0I">
+                                <rect key="frame" x="119" y="240.5" width="137" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="WcF-cI-cqK">
+                                <rect key="frame" x="67.5" y="45" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Wq1-vo-TXn"/>
+                                    <constraint firstAttribute="width" constant="240" id="fnD-z8-M01"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.73483115434646606" green="0.72815835475921631" blue="0.7349126935005188" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Gzg-iq-H0I" firstAttribute="top" secondItem="PXu-U3-u7Z" secondAttribute="bottom" constant="15" id="80o-Uu-zjd"/>
+                            <constraint firstItem="WcF-cI-cqK" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="8rb-zr-Aps"/>
                             <constraint firstItem="mgT-bQ-tgo" firstAttribute="top" secondItem="HtK-OO-ucH" secondAttribute="bottom" constant="27" id="M0t-Y9-847"/>
-                            <constraint firstItem="3EP-2G-fIO" firstAttribute="top" secondItem="5pg-dB-oM5" secondAttribute="top" constant="88" id="Nqc-2p-NpZ"/>
                             <constraint firstItem="mgT-bQ-tgo" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="OV2-CI-5id"/>
+                            <constraint firstItem="WcF-cI-cqK" firstAttribute="top" secondItem="5pg-dB-oM5" secondAttribute="top" constant="25" id="TNP-IQ-Gn5"/>
                             <constraint firstItem="HtK-OO-ucH" firstAttribute="top" secondItem="3EP-2G-fIO" secondAttribute="bottom" constant="27" id="Wth-P5-G1q"/>
-                            <constraint firstItem="HtK-OO-ucH" firstAttribute="top" secondItem="3EP-2G-fIO" secondAttribute="bottom" constant="27" id="YRZ-IB-eyp"/>
                             <constraint firstItem="3EP-2G-fIO" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="akk-ai-ivW"/>
+                            <constraint firstItem="3EP-2G-fIO" firstAttribute="top" secondItem="Gzg-iq-H0I" secondAttribute="bottom" constant="30" id="euT-WD-pbi"/>
                             <constraint firstItem="HtK-OO-ucH" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="fAa-Qi-gcc"/>
-                            <constraint firstItem="3EP-2G-fIO" firstAttribute="top" secondItem="5pg-dB-oM5" secondAttribute="top" constant="88" id="oiP-K5-5cj"/>
-                            <constraint firstItem="HtK-OO-ucH" firstAttribute="top" secondItem="3EP-2G-fIO" secondAttribute="bottom" constant="27" id="vyG-9Z-QCk"/>
+                            <constraint firstItem="Gzg-iq-H0I" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="fcg-QH-9gH"/>
+                            <constraint firstItem="PXu-U3-u7Z" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="goV-UF-3DO"/>
+                            <constraint firstItem="PXu-U3-u7Z" firstAttribute="top" secondItem="WcF-cI-cqK" secondAttribute="bottom" constant="20" id="yL1-W5-TBC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5pg-dB-oM5"/>
                     </view>
@@ -259,5 +281,6 @@
         <image name="cellButton" width="200" height="200"/>
         <image name="icon-game-over" width="48" height="48"/>
         <image name="icon-happy-48" width="48" height="48"/>
+        <image name="mine-icon-black-50" width="50" height="50"/>
     </resources>
 </document>
